--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -385,6 +385,14 @@ IF (GDB_FOUND)
 	SET(GDB_DEFAULT_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/src/.gdb)
 ENDIF()
 
+FIND_PACKAGE(Cereal)
+IF(NOT CEREAL_FOUND)
+	include(external/Cereal)
+	LIST(APPEND INCLUDES ${CEREAL_INCLUDE_DIRS})
+ELSE()
+	LIST(APPEND INCLUDES ${CEREAL_INCLUDE_DIRS})
+ENDIF()
+
 FIND_PACKAGE(Doxygen 1.8.6)
 IF(DOXYGEN_FOUND)
 	SET(HAVE_DOXYGEN 1)
